@@ -8,7 +8,6 @@ a,img					{border:0; outline:none;}textarea:focus,input:focus{outline:0;}*:focus
 img						{color:#000;}
 
 body,html 				{background:none; color:#000; width:100%; height:100%; margin:0; padding:0; font-family:Arial, Helvetica, sans-serif; text-rendering:optimizelegibility; word-wrap:break-word;}
-html					{background-color:#000;}
 
 
 /*	Links & fonts
