@@ -49,7 +49,7 @@
 </style>
 {beige}
 {main_head_search} <!-- general.html LINE 123	-->
-{search_trend}
+{search_trend2}
 {more_search_intro2}
 {view_search_wrap2}
 {where_is_the_data_from}
@@ -63,7 +63,7 @@
 
 #search_trend
 <div class="search_trend_wrap">	<!--	Trending search	-->
-  <span>Trending</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><!--<a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a><a href="?text_search=earthquake#view=main">Earthquake</a><a href="?text_search=tsunami#view=main">Tsunami</a><a href="?text_search=malaria#view=main">Malaria</a>-->
+  <span>Quick search</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><!--<a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a><a href="?text_search=earthquake#view=main">Earthquake</a><a href="?text_search=tsunami#view=main">Tsunami</a><a href="?text_search=malaria#view=main">Malaria</a>-->
 </div>
 	
 <!-- GLOSSARY	-->
@@ -415,6 +415,11 @@
 </div>
 
 
+<!-- SEARCH	 2	-->
+#search_trend2
+<div class="search_trend_wrap">	<!--	Trending search	-->
+  <span>Trending</span><a href="?aids=COVID-19#view=main" class="now">COVID-19</a><a href="?text_search=Beirut%20Explosion#view=main">Beirut Explosion</a><a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a>
+</div>
 
 <!-- GLOSSARY 2	-->
 #more_search_intro2
