@@ -1,3 +1,9 @@
+Development Portal (2020-08-03 shi)
+==============================
+Changed trending to quick search
+Updated print-friendly html background-color
+
+
 Development Portal (2020-07-17 shi)
 ==============================
 Hide utter box until further notice
